# plugin-bot

./: .gitignore  Pipfile  README.rst  plugin_bot.py  pyproject.toml  tox.ini
plugin_bot/: __init__.py
plugin_bot/plugins/: __init__.py
tests/: test_functional.py
